--- a/src/app.html
+++ b/src/app.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="/styles.css" />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <!-- We are preloading the VS Code Desktop Screenshot so that it get's rendered instantly as the toggle is switched. -->
-    <link rel="preload" as="image" href="/images/index/vscode-desktop.png" />
+    <link rel="preload" as="image" href="/images/index/vscode-desktop.webp" />
     <link rel="icon" type="image/png" href="/favicon192.png" />
 
     <!-- This contains the contents of the <svelte:head> component, if
