--- a/src/app.html
+++ b/src/app.html
@@ -33,6 +33,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" rel="preload" href="/font.css" as="style" />
+    <link rel="stylesheet" href="/global.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <link rel="manifest" href="/manifest.json" crossorigin="use-credentials" />
     <!-- We are preloading the VS Code Desktop Screenshot so that it get's rendered instantly as the toggle is switched. -->
     <link rel="preload" as="image" href="/images/index/vscode-desktop.webp" />
